--- a/firstround.html
+++ b/firstround.html
@@ -7,12 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Firstround</title>
     <link rel="stylesheet" type="text/css" href="firstround.css">
+
 </head>
 
 
 <body>
+
     <div class="container">
-        <h1 class="title">Firstround</h1>
+        <h1 class="title">First round</h1>
         <div class="grid-container">
             <div class="category-row">
                 <div class="category">Category 1</div>
@@ -20,53 +22,56 @@
                 <div class="category">Category 3</div>
                 <div class="category">Category 4</div>
                 <div class="category">Category 5</div>
-                <div class="category">Category 6</div>
+
             </div>
             <div class="points-row">
+                <div class="points">100</div>
                 <div class="points">200</div>
+                <div class="points">300</div>
                 <div class="points">400</div>
-                <div class="points">800</div>
-                <div class="points">1600</div>
-                <div class="points">3200</div>
-                <div class="points">6400</div>
+                <div class="points">500</div>
+
             </div>
             <div class="points-row">
+                <div class="points">100</div>
                 <div class="points">200</div>
+                <div class="points">300</div>
                 <div class="points">400</div>
-                <div class="points">800</div>
-                <div class="points">1600</div>
-                <div class="points">3200</div>
-                <div class="points">6400</div>
+                <div class="points">500</div>
+
             </div>
             <div class="points-row">
+                <div class="points">100</div>
                 <div class="points">200</div>
+                <div class="points">300</div>
                 <div class="points">400</div>
-                <div class="points">800</div>
-                <div class="points">1600</div>
-                <div class="points">3200</div>
-                <div class="points">6400</div>
+                <div class="points">500</div>
+
             </div>
             <div class="points-row">
+                <div class="points">100</div>
                 <div class="points">200</div>
+                <div class="points">300</div>
                 <div class="points">400</div>
-                <div class="points">800</div>
-                <div class="points">1600</div>
-                <div class="points">3200</div>
-                <div class="points">6400</div>
+                <div class="points">500</div>
+
             </div>
             <div class="points-row">
+                <div class="points">100</div>
                 <div class="points">200</div>
+                <div class="points">300</div>
                 <div class="points">400</div>
-                <div class="points">800</div>
-                <div class="points">1600</div>
-                <div class="points">3200</div>
-                <div class="points">6400</div>
+                <div class="points">500</div>
+
             </div>
         </div>
         <div class="input-section">
             <input type="text" class="input-box" placeholder="User Input...">
+
+        </div>
+        <div>
             <button class="guess-button">Guess</button>
-            <button class="pass-button">Pass</but ston>
+            <button class="pass-button">Pass</button>
         </div>
         <div class="score-section">
             <div class="player-score">
@@ -78,6 +83,14 @@
                 <span class="score">0</span>
             </div>
         </div>
+        <div>
+            <a href="secondround.html">
+                <button class="next-round-button">Next Round</button>
+
+            </a>
+        </div>
+    </div>
+    </div>
     </div>
     <footer class="footer">
         Upright Unit 1 Project Copyright [2023]
