--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!--
+    Name:Keith David
+    Ptsb-June-2023
+    Jeopardy Project
+ -->
+<!--
+    Note: As you can see the project does not have the folder structure mentioned in the instructions
+    It is because everytime I put the css files in the css folder the formating goes away from the page.
+ -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Jeopardy </title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles.folder/style.css">
 </head>
 
 <body>
