--- a/secondround.html
+++ b/secondround.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Second round</title>
-    <link rel="stylesheet" type="text/css" href="firstround.css">
-    <link rel="stylesheet" href="secondround.css">
+    <link rel="stylesheet" type="text/css" href="styles.folder/firstround.css">
+    <link rel="stylesheet" href="styles.folder/secondround.css">
 </head>
 
 
