Error resolved / previous round

--- a/finalround.html
+++ b/finalround.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="styles.folder/final.css">
     <link rel="stylesheet" href="styles.folder/firstround.css">
     <link rel="stylesheet" href="styles.folder/secondround.css">
+    <title>Final Round</title>
 </head>
 
 <body>
@@ -22,7 +23,7 @@
     </div>
 
     <div>
-        <a href="firstround.html">
+        <a href="secondround.html">
             <button class="previous-round">Previous Round</button>
 
         </a>
